fixing mix blend on ios

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -65,6 +65,5 @@ body {
 
 
 .customMix {
-  transform: translate3d(0,0,0);
   mix-blend-mode: soft-light;
 }
